--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -182,7 +182,7 @@
     "l=['a','b','c']\n",
     "t=(20,30,40)\n",
     "l=l+list(t) # or l+=t we get same address\n",
-    "t=tuple(l)+t\n",
+    "t=tuple(l)+t # or t+=tuple(l) we get deff address eventhough we use += operator. because tuple is immutable.\n",
     "\n",
     "\n",
     "print(l)\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,19 +255,19 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "not even\n",
-      "even\n"
+      "even\n",
+      "odd\n"
      ]
     }
    ],
    "source": [
     "#wap to check the given number is greater than 150\n",
-    "a=333\n",
+    "a=336\n",
     "print(a>150)\n",
     "# wap to check the given number is even\n",
     "print(('even','not even')[(a%2!=0)])\n",
     "# wap to check the given number is odd\n",
-    "b=46\n",
+    "b=47\n",
     "print(('odd','even')[(b%2==0)])\n",
     "\n"
    ]
@@ -276,6 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "replication:-\n",
     "in between - start < value and value < end\n",
     "between    - start <= value and value <= end\n",
     "range      - start <= value and value <= end\n",
@@ -284,11 +285,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123123123123123123\n",
+      "(20, 30, 20, 30, 20, 30, 20, 30, 20, 30, 20, 30)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'set' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(s\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(b\u001b[39m*\u001b[39;49m\u001b[39m6\u001b[39;49m)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m*\u001b[39m\u001b[39m6\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[39m# unsuported operand * for set and dict\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'set' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "a=10"
+    "# to check replication of a given string with 6\n",
+    "s='123';a=(20,30);b={10,20};c={10:20}\n",
+    "print(s*6)\n",
+    "print(a*6)\n",
+    "print(b*6)\n",
+    "print(c*6)\n",
+    "# unsuported operand * for set and dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "10\n",
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to check the given number is divisible by 3 and also should be greater than 22\n",
+    "a=333;b=18\n",
+    "print(a%3==0 and a>22)\n",
+    "print(b%3==0 and b>22)\n",
+    "# to check the length of the collection is even or not\n",
+    "g='imran khan'\n",
+    "print(len(g))\n",
+    "print(('not even','even')[len(g)%2==0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to check the length of the collection is less than 55 and greater than 16\n",
+    "a='abcdefghijklmnopqrsturwxyz'\n",
+    "print(len(a)>16 and len(a)<55)\n",
+    "# or\n",
+    "print(16<len(a)<55)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the type of data by extracting the middle position of the collection. either 'str','list','tuple'ArithmeticError\n",
+    "a=[10,('a','b'),[10,20]]\n",
+    "print(type(a[len(a)//2]))\n",
+    "c=type(a[len(a)//2])\n",
+    "print(c in( str,list,tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#68: to check the number is greater than 20 and less than 30 and it should be even\n",
+    "a=24\n",
+    "b=27\n",
+    "print(a>20 and a<30 and a%2==0) #OR\n",
+    "print(20<b<30 and b%2==0)\n",
+    "#69: to check the number is even and it should be less than 120\n",
+    "x=100\n",
+    "print(x%2==0 and x<120)\n",
+    "#70: to check the number is even and present in 40 to 70\n",
+    "y=88\n",
+    "print(y%2==0 and y in range(40,70))\n",
+    "#71: to check the number is odd and it should be greater than 9\n",
+    "a=77\n",
+    "print(a%2!=0 and a>9)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#72: to check the number is less than 122 and greater than 48 and the number should be divisible by 4\n",
+    "a=56\n",
+    "print(a in range(48,122) and a%4==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#73: to check the number is divisible by 3 or 5,display the value\n",
+    "a=20\n",
+    "if (a%3==0 or a%5==0):\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print('number is not divisible by 3 or 5 ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#74/75: to check the number is between 100 to 200 including the limit\n",
+    "a=177\n",
+    "print(a in range (100,200))"
    ]
   },
   {
