--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,8 @@
      "output_type": "stream",
      "text": [
       "20\n",
-      "['2', '0']\n"
+      "['2', '0']\n",
+      "20\n"
      ]
     }
    ],
@@ -103,7 +104,8 @@
     "a=20\n",
     "a=str(a)\n",
     "print(a)\n",
-    "print(list(a))"
+    "print(list(a))\n",
+    "print(str(a))"
    ]
   },
   {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,8 @@
      "text": [
       "True\n",
       "even\n",
-      "odd\n"
+      "odd\n",
+      "True\n"
      ]
     }
    ],
@@ -264,22 +267,26 @@
     "#wap to check the given number is greater than 150\n",
     "a=336\n",
     "print(a>150)\n",
-    "# wap to check the given number is even\n",
+    "# 60: wap to check the given number is even\n",
     "print(('even','not even')[(a%2!=0)])\n",
-    "# wap to check the given number is odd\n",
+    "#61: wap to check the given number is odd\n",
     "b=47\n",
     "print(('odd','even')[(b%2==0)])\n",
-    "\n"
+    "#59:to check the number is greater than 15 and less than 24\n",
+    "e=20\n",
+    "print(e>15 and e<24)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "replication:-\n",
-    "in between - start < value and value < end\n",
-    "between    - start <= value and value <= end\n",
-    "range      - start <= value and value <= end\n",
+    "range:-\n",
+    "in between :- start < value and value < end\n",
+    "\n",
+    "between    :- start <= value and value <= end\n",
+    "\n",
+    "range      :- start <= value and value <= end\n",
     "\n"
    ]
   },
@@ -309,7 +316,7 @@
     }
    ],
    "source": [
-    "# to check replication of a given string with 6\n",
+    "#62: to check replication of a given string with 6\n",
     "s='123';a=(20,30);b={10,20};c={10:20}\n",
     "print(s*6)\n",
     "print(a*6)\n",
@@ -391,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +408,7 @@
       "True\n",
       "False\n",
       "True\n",
-      "False\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -416,7 +423,9 @@
     "x=100\n",
     "print(x%2==0 and x<120)\n",
     "#70: to check the number is even and present in 40 to 70\n",
-    "y=88\n",
+    "y=50\n",
+    "print(y%2==0 and  (y>=40 and y<=70))\n",
+    "# or \n",
     "print(y%2==0 and y in range(40,70))\n",
     "#71: to check the number is odd and it should be greater than 9\n",
     "a=77\n",
@@ -425,26 +434,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "#72: to check the number is less than 122 and greater than 48 and the number should be divisible by 4\n",
     "a=120\n",
-    "print(a in range(48,122) and a%4==0)"
+    "print(a in range(48,122) and a%4==0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +476,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#74/75: to check the number is between 100 to 200 including the limit\n",
+    "a=100\n",
+    "print(a in range (100,200))\n",
+    "print(a>=100 and a<=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,17 +509,10 @@
     }
    ],
    "source": [
-    "#74/75: to check the number is between 100 to 200 including the limit\n",
-    "a=177\n",
-    "print(a in range (100,200))"
+    "#74: to check the number is between 100 to 200 \n",
+    "a=104\n",
+    "print(a>100 and a<200)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
