--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -489,7 +489,7 @@
     }
    ],
    "source": [
-    "#74/75: to check the number is between 100 to 200 including the limit\n",
+    "#74: to check the number is between 100 to 200 including the limit\n",
     "a=100\n",
     "print(a in range (100,200))\n",
     "print(a>=100 and a<=200)"
@@ -509,9 +509,550 @@
     }
    ],
    "source": [
-    "#74: to check the number is between 100 to 200 \n",
+    "#75: to check the number is between 100 to 200 \n",
     "a=104\n",
     "print(a>100 and a<200)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''76: write a equation to check last charecter ascii value should be divisible by 5 or not'''\n",
+    "a=b'A';b=b'a'\n",
+    "print(list(a)[-1]%5==0 ,list(b)[-1]%5==0)\n",
+    "# or\n",
+    "a='apple'\n",
+    "print(ord(a[-1])%5==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#77: to check the given number is b/w 60 to 130 and the number should be divisible by 3 and 4 and last digit should be greater than 9\n",
+    "n=129\n",
+    "print(60<=n<=130 and n%3==0 and n%4==0 and 9>n%10)\n",
+    "m=120\n",
+    "print(60<=m<=130 and m%3==0 and m%4==0 and 9>m%10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#78: to check the given number is even or less than 25\n",
+    "n=24;m=49\n",
+    "print(n%2==0 or n<25,m%2==0 or m<25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#79: to the number is even or greater than 25\n",
+    "n=23;m=49\n",
+    "print(n%2==0 or n>25,m%2==0 or m>25)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#80: to the number is divisible by 3 or 5\n",
+    "n=55;m=32\n",
+    "print(n%3==0 or  n%5==0 ,m%3==0 or m%5==0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#81: to check the number is not an even number\n",
+    "a=21\n",
+    "print(a%2!=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#82: to check the number is not an odd number\n",
+    "a=22\n",
+    "print(a%2==0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#83: to check the number is not divisible by 3\n",
+    "a=23\n",
+    "print(a%3!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#84: to check the number is not divisible by 3 and 5\n",
+    "a=23\n",
+    "print(a%2!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#85: to check the number is not divisible by 3 or 5\n",
+    "a=25\n",
+    "print(a%3!=0 or a%5!=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#86: to check the given charecter ASCII value is divisible by 5\n",
+    "a='i'\n",
+    "print(len(a)==1 and ord(a)%5==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#87: to find the ASCII charecter in a given number\n",
+    "a=65\n",
+    "print(chr(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 88: to find out the ASCII value in a given charecter\n",
+    "a='M'\n",
+    "print(len(a)==1 and ord(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#89: to check the given charecter is upper_case or not\n",
+    "a='E'\n",
+    "print('A'<=a<='Z') #or\n",
+    "print(65<=ord(a)<=90)#or\n",
+    "print(len(a)==1 and 'A'<=a<='Z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#90: to check the given charecter is lower_case or not\n",
+    "a='E'\n",
+    "print('a'<=a<='z') #or\n",
+    "print(97<=ord(a)<=122)#or\n",
+    "print(len(a)==1 and 'a'<=a<='z')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#91: to check the charecter is alphabet or not\n",
+    "a='s'\n",
+    "print('a'<=a<='z' or 'A'<=a<='Z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#92: to check the charecter is ASCII number (0....9)\n",
+    "a='5'\n",
+    "print( len(a)==1 and '0'<=a<='9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#91: to check the charecter is special charecter or not\n",
+    "a='$'\n",
+    "print(not('a'<=a<='z' or 'A'<=a<='Z' or '0'<=a<='9'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#94: to check given charecter should not be upper_case\n",
+    "a='D';b='a'\n",
+    "print(not('A'<=a<='Z'), not('A'<=b<='Z'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#95: to check given charecter should not be lower_case\n",
+    "a='D';b='a'\n",
+    "print(not('a'<=a<='z'), not('a'<=b<='z'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#96: to check given charecter should not be a alphabet\n",
+    "a='D';b='a'\n",
+    "print(not('A'<=a<='Z'), not('a'<=b<='z'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#97: to check given charecter should not be a ASCII number\n",
+    "a='3'\n",
+    "print(not('0'<=a<='9'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#98: to check given charecter should not be a special charecter\n",
+    "a='$';b='d'\n",
+    "print('a'<=a<='z' or 'A'<=a<='Z' or '0'<=a<='9')\n",
+    "print(('a'<=b<='z' or 'A'<=b<='Z' or '0'<=b<='9'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n",
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#99: to check the charecter is a vowel\n",
+    "a='A';b='D'\n",
+    "print(a in 'aeiouAEIOU',b in 'aeiouAEIOU')\n",
+    "#OR\n",
+    "print('a'==a or 'e'==a or a=='i' or a=='o' or a=='u' or a=='A' or a=='E' or a=='I' or a=='O' or a=='U' , 'a'==b or 'e'==b or b=='i' or b=='o' or b=='u' or b=='A' or b=='E' or b=='I' or b=='O' or b=='U')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n",
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#100: to check the charecter is a consonent\n",
+    "a='A';b='D'\n",
+    "print(a not in 'aeiouAEIOU',b not in 'aeiouAEIOU')\n",
+    "#OR\n",
+    "print( a!='a' and a!='e' and a!='i' and a!='o' and a!='u' and a!='A' and a!='E' and a!='I' and a!='O' and a!='U' , b!='a' and b!='e' and b!='i' and b!='o' and b!='u' and b!='A' and b!='E' and b!='I' and b!='O' and b!='U')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".lower() is a built-in Python method primarily used for string handling. The .lower() method takes no arguments and returns the lowercased strings from the given string by converting each uppercase character to lowercase. If there are no uppercase characters in the given string, it returns the original string.\n",
+    "\n",
+    "/\n",
+    ".upper(): to change the charecter lowercase to uppercase\n",
+    ".swapcase(): uppercase to lowercase or lowercase to uppercase\n",
+    ".isupper(): is a built-in method used for string handling. This method returns True if all characters in the string are uppercase, otherwise, returns “False”.  \n",
+    ".islower(): is a built-in method used for string handling. This method returns True if all characters in the string are lowercase, otherwise, returns “False”. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imran_7777\n",
+      "imran_7777\n"
+     ]
+    }
+   ],
+   "source": [
+    "#101: to conver the given charecter upper_case to lower_case\n",
+    "a='IMRAN_7777'\n",
+    "print(a.lower())\n",
+    "print(a.swapcase())\n"
    ]
   }
  ],
