--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1051,10 +1051,705 @@
     }
    ],
    "source": [
-    "#101: to conver the given charecter upper_case to lower_case\n",
+    "#101: to conver the given character upper_case to lower_case\n",
     "a='IMRAN_7777'\n",
     "print(a.lower())\n",
     "print(a.swapcase())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#101: to conver the given character upper_case to lower_case without builtin functions\n",
+    "# A-65,a-97 diff-32\n",
+    "#A-65+32=97-a\n",
+    "a='A'\n",
+    "print(chr(ord(a)+32))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#102: was to convert lowercase to uppercase in given character\n",
+    "a='a'\n",
+    "print(a.upper())\n",
+    "#OR\n",
+    "print(chr(ord(a)-32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "#103: to extract the previous character in the given character\n",
+    "a='B'\n",
+    "print(chr(ord(a)-1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "#104: to extract the next character in the given character\n",
+    "a='B'\n",
+    "print(chr(ord(a)+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#105: to check the given character is converted to ASCII value the value is even as well as the character should be lowercase\n",
+    "a='d'\n",
+    "print(ord(a)%2==0 and len(a)==1 and 'a'<=a<='z')\n",
+    "a='e'\n",
+    "print(ord(a)%2==0 and len(a)==1 and 'a'<=a<='z')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#106: to check the given character is converted to ASCII value the value is even as well as the character should be uppercase\n",
+    "a='D'\n",
+    "print( len(a)==1 and ord(a)%2==0  and 'A'<=a<='Z')\n",
+    "a='E'\n",
+    "print(len(a)==1 and ord(a)%2==0 and  'Z'<=a<='Z')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#107: to check which the given number is converted to charecter is not a special symbol or not\n",
+    "a=58;b=57\n",
+    "print('A'<=chr(a)<='Z' or 'a'<=chr(a)<='z' or '0'<=chr(a)<='9')\n",
+    "print('A'<=chr(b)<='Z' or 'a'<=chr(b)<='z' or '0'<=chr(b)<='9')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#108: to check the given number of the ascii character is a vowel or not\n",
+    "n=65;M=66\n",
+    "print(chr(n) in 'aeiouAEIOU')\n",
+    "print(chr(M) in 'aeiouAEIOU')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#109: TO check if the first and second character are sequence or not in a given string\n",
+    "s='ABCD';b='ADCD'\n",
+    "print(ord(s[0])==ord(s[1])-1)\n",
+    "print(ord(b[0])==ord(b[1])-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#110: to check the given character ASCII value should be either greater than 50 or greater than 25 or less than 112\n",
+    "a='0'\n",
+    "print(ord(a)>25 or ord(a)<112)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#111: wae to given number is increased by 1\n",
+    "a=10\n",
+    "a+=1\n",
+    "print(a)\n",
+    "b=10\n",
+    "b=b+1\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#112: WAE to ....increase by 2\n",
+    "#113: ...........decrease by 1\n",
+    "#114:........................3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#115: WAE to check the given integer number is present in the collection\n",
+    "n=10\n",
+    "b=[30,10,40,89]\n",
+    "print(n in b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "#116: WAE to check perform the addition operation on A value and B value and final result should be updated to A\n",
+    "A=50\n",
+    "B=60\n",
+    "A=A+B # OR A+=B\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#117:WAE TO check the given value is present in the collection \n",
+    "a='p';d='P'\n",
+    "b='PYSPIDERS'\n",
+    "print(a in b)\n",
+    "print(d in b)\n",
+    "st=[10,'hai']\n",
+    "c=[10,'hai',(10,20),[10,'hai']]\n",
+    "print( st in c)\n",
+    "t=(10,'hai')\n",
+    "w=(10,'hai',(10,20),[10,'hai'])\n",
+    "print(t in w)\n",
+    "\n",
+    "#........................\n",
+    "st=10\n",
+    "col={10,'hai',(10,20),(10,'hai')}\n",
+    "print(st in col)\n",
+    "st='a'\n",
+    "col={'a':10,'b':20,'c':30}\n",
+    "st in col\n",
+    "st=10\n",
+    "col={'a':10,'b':20,'c':30}\n",
+    "st in col\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#118: wae to check the given list is present in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#119: wae to check the given dict value is present in tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'type'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#120: wae to check given value is integer value or not\n",
+    "b=15\n",
+    "print(type(b))\n",
+    "print(type(int))\n",
+    "print(type(b)==int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#121: wae to check given value is string value or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#122: wae to check given value is single value or not (/ int/float/complex/boolean/Non)\n",
+    "c=b'1010';b='str'\n",
+    "print(type(c) in [int,float,complex,bool,bytes,type(None)])\n",
+    "print(type(b) in [int,float,complex,bool,bytes,type(None)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#123: wae to check given value should not be a single value\n",
+    "c=b'1010';b='str'\n",
+    "print(type(c) not in [str,list,tuple,set,dict])\n",
+    "print(type(b) not in [str,list,tuple,set,dict])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#124: wae to check given value is multi value or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#125: wae to check given value is a mutable value or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#126: wae to check the given value is an immutable or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#127: wae to check if a given value is divisible by 6  as well as that value present in the collection or not\n",
+    "n=36\n",
+    "print(n%6==0 and n in [10,20,48,36,45,105])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#128: to check perform the bitwise and operation given values are 15 and 19\n",
+    "print(15&19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127\n"
+     ]
+    }
+   ],
+   "source": [
+    "#129: wae to check perform the bitwise or operation  given values are (115 and 79)\n",
+    "print(115|79)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "#130: bitwise XOR  given values are (56,22)\n",
+    "print(56^22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#131: bitwise NOT given values 15\n",
+    "n=15\n",
+    "print(~n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#132: bitwise leftshift with 32 and skipping value is 3\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#133: bitwise rightshift with 25 and skipping value is 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#134: to find out the output of a given condition (10+20*80 and 10**3) or ((10,20) or not([15-16]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#135: wae to check if a given key is present in a dict\n",
+    "d={'a':10,'hai':'bey',(100,):(10,20)}\n",
+    "k='a'\n",
+    "print(k in d)\n",
+    "print(k in d.keys())\n",
+    "k=10\n",
+    "print(k in d)\n",
+    "k=('a',10)\n",
+    "print(k in d.items())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#136: wae to check if value is present  in the dict or not\n",
+    "d={'a':10,'hai':'bey',(100,):(10,20)}\n",
+    "k=10\n",
+    "print(k in d)\n",
+    "print(k in d.values())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#137: wae to check if key is present  in the dict or not\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#138: wae to check if key and value is present  in the dict or not\n",
+    "d={'a':10,'hai':'bey',(100,):(10,20)}\n",
+    "k=('a',10)\n",
+    "print(k in d.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "C:\\Users\\Shaik Imran\\AppData\\Local\\Temp\\ipykernel_33064\\4164406787.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  print(257 is 257)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#139: to check  if two values  are pointing to the same address or not\n",
+    "a=257\n",
+    "b=257\n",
+    "print(a is b)\n",
+    "print(257 is 257)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#140: wae to check both the values should be integer and both the values are pointing to the same address\n",
+    "a=256\n",
+    "b=256\n",
+    "print(type(a)==int and type(b)==int and a is b)"
    ]
   }
  ],
