--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -1290,13 +1290,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "#112: WAE to ....increase by 2\n",
-    "#113: ...........decrease by 1\n",
-    "#114:........................3\n"
+    "#112: WAE to given number increase by 2\n",
+    "a=10\n",
+    "a+=2\n",
+    "print(a)\n",
+    "b=10\n",
+    "b=b+2\n",
+    "print(b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#113: wae to given number is decrease by 1\n",
+    "a=10\n",
+    "a+=-1\n",
+    "print(a)\n",
+    "b=10\n",
+    "b=b-1\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#114: wae to given number is decrease by 3\n",
+    "a=10\n",
+    "a+=-3\n",
+    "print(a)\n",
+    "b=10\n",
+    "b=b-3\n",
+    "print(b)\n",
+    "\n"
    ]
   },
   {
@@ -1363,9 +1426,6 @@
     "b='PYSPIDERS'\n",
     "print(a in b)\n",
     "print(d in b)\n",
-    "st=[10,'hai']\n",
-    "c=[10,'hai',(10,20),[10,'hai']]\n",
-    "print( st in c)\n",
     "t=(10,'hai')\n",
     "w=(10,'hai',(10,20),[10,'hai'])\n",
     "print(t in w)\n",
@@ -1384,20 +1444,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#118: wae to check the given list is present in the list"
+    "#118: wae to check the given list is present in the list\n",
+    "st=[10,'hai']\n",
+    "c=[10,'hai',(10,20),[10,'hai']]\n",
+    "print( st in c)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#119: wae to check the given dict value is present in tuple"
+    "#119: wae to check the given dict value is present in tuple\n"
    ]
   },
   {
@@ -1425,11 +1496,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'type'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#121: wae to check given value is string value or not"
+    "#121: wae to check given value is string value or not\n",
+    "b='15'\n",
+    "print(type(b))\n",
+    "print(type(str))\n",
+    "print(type(b)==str)"
    ]
   },
   {
@@ -1476,29 +1561,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#124: wae to check given value is multi value or not"
+    "#124: wae to check given value is multi value or not\n",
+    "c=56;b='str'\n",
+    "print(type(c)  in [str,list,tuple,set,dict])\n",
+    "print(type(b)  in [str,list,tuple,set,dict])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#125: wae to check given value is a mutable value or not"
+    "#125: wae to check given value is a mutable value or not\n",
+    "c=56;b=['str',5678]\n",
+    "print(type(c)  in [list,set,dict])\n",
+    "print(type(b)  in [list,set,dict])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "#126: wae to check the given value is an immutable or not"
+    "#126: wae to check the given value is an immutable or not\n",
+    "c=56;b=['str',5678]\n",
+    "print(type(c) not in [list,set,dict])\n",
+    "print(type(b) not in [list,set,dict])\n"
    ]
   },
   {
@@ -1595,30 +1716,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
    "source": [
     "#132: bitwise leftshift with 32 and skipping value is 3\n",
-    "print"
+    "print(32<<3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "#133: bitwise rightshift with 25 and skipping value is 2\n"
+    "#133: bitwise rightshift with 25 and skipping value is 2\n",
+    "print(25>>2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
-    "#134: to find out the output of a given condition (10+20*80 and 10**3) or ((10,20) or not([15-16]))"
+    "#134: to find out the output of a given condition (10+20*80 and 10**3) or ((10,20) or not([15-16]))\n",
+    "print( (10+20*80 and 10**3) or ((10,20) or not([15-16])))"
    ]
   },
   {
@@ -1673,11 +1820,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#137: wae to check if key is present  in the dict or not\n"
+    "#137: wae to check if key is present  in the dict or not\n",
+    "a={33:'ser','f':58,44:'rrks'}\n",
+    "b=33\n",
+    "print(b in a.keys())"
    ]
   },
   {
