--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -1464,11 +1464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#119: wae to check the given dict value is present in tuple\n"
+    "#119: wae to check the given dict value is present in tuple\n",
+    "t=(10,20,{1,2,3,},{1:2,2:3,3:4})\n",
+    "d={1:2,2:3,3:4}\n",
+    "print(d in t)\n"
    ]
   },
   {
